--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -216,115 +216,31 @@ box-shadow: none;
 }
 
 .thumb{
-width: 300px;
-height: 300px;
+width: inherit;
+height: inherit;
 display: inline-block;
 position: relative;
 background-color: rgba(100,100,100,.9);
 background-repeat:no-repeat !important;
 }
 
-#thumbnail1{
-	height: 300px;
+.w300{
 	width: 300px;
 }
-#thumb1{
-	background:url(../content/1/thumb.png) 0px 0px;
-	background-repeat:no-repeat;
-}
-#thumb1.over{
-	background:url(../content/1/thumbover.png) 0px 0px;
-	background-repeat:no-repeat;
-}
-
-#thumbnail2{
-	height: 139px;
+.w622{
 	width: 622px;
 }
-#thumb2{
-	background:url(../content/2/n.png) 0px -60px;
-	background-repeat:no-repeat;
-	height: inherit;
-	width: inherit;
+.w944{
+	width: 944px;
 }
-#thumb2.over{
-	background:url(../content/2/no.png) 0px -60px;
-	background-repeat:no-repeat;
-}
-
-#thumbnail3{
-	width: 300px;
+.h139{
 	height: 139px;
 }
-#thumb3{
-	background:url(../content/3/n.png) 0px 0px;
-	background-repeat:no-repeat;
-	height: inherit;
-	width: inherit;
-}
-#thumb3.over{
-	background:url(../content/3/no.png) 0px 0px;
-	background-repeat:no-repeat;
-}
-
-#thumbnail4{
-	width: 139px;
-	height: 139px;
-}
-#thumb4{
-	background:url(../content/4/n.png) 0px 0px;
-	background-repeat:no-repeat;
-	height: inherit;
-	width: inherit;
-}
-#thumb4.over{
-	background:url(../content/4/no.png) 0px 0px;
-	background-repeat:no-repeat;
-}
-
-#thumbnail5{
-	width: 300px;
+.h300{
 	height: 300px;
 }
-#thumb5{
-	background:url(../content/5/n.png) 0px 0px;
-	background-repeat:no-repeat;
-	height: inherit;
-	width: inherit;
-}
-#thumb5.over{
-	background:url(../content/5/no.png) 0px 0px;
-	background-repeat:no-repeat;
-}
-
-#thumbnail6{
-	width: 300px;
+.h450{
 	height: 450px;
-}
-#thumb6{
-	background:url(../content/6/n.png) 0px 0px;
-	background-repeat:no-repeat;
-	height: inherit;
-	width: inherit;
-}
-#thumb6.over{
-	background:url(../content/6/no.png) 0px 0px;
-	background-repeat:no-repeat;
-}
-
-#thumbnail7{
-	width: 300px;
-	height: 300px;
-}
-#thumb7{
-	background:url(../content/7/n.png) 0px 0px;
-	background-repeat:no-repeat;
-	height: inherit;
-	width: inherit;
-}
-#thumb7.over{
-	background:url(../content/7/no2.png) 0px 0px;
-	background-repeat:no-repeat;
 }
 
 #line{
