--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -7,31 +7,39 @@
 }
 
 #body{
-z-index: -99999999;
-background-color: rgb(255,255,255);
-padding:0px !important;
-margin:0px !important;
+	z-index: -99999999;
+	background-color: rgb(255,255,255);
+	padding:0px !important;
+	margin:0px !important;
+}
+
+a{
+	text-decoration: none !important;
+	color: rgb(0, 176, 120);
+}
+a:hover{
+	color: rgb(207, 181, 46);
 }
 
 .progress{
-width: 100px;
-height: 3px;
-margin: 0 auto;
-z-index: -1001;
-border: 1px solid black;
-position: relative;
-top: 20px;
+	width: 100px;
+	height: 3px;
+	margin: 0 auto;
+	z-index: -1001;
+	border: 1px solid black;
+	position: relative;
+	top: 20px;
 }
 
 #loading{
-width: 100%;
-height: 100%;
-background-color: white;
-z-index: 1000;
-position: absolute;
-top: -42px;
-padding-top: 100px;
-cursor: wait;
+	width: 100%;
+	height: 100%;
+	background-color: white;
+	z-index: 1000;
+	position: absolute;
+	top: -42px;
+	padding-top: 100px;
+	cursor: wait;
 }
 
 #landing{
@@ -67,22 +75,19 @@ text-align: center;
 }
 
 .container{
-position: relative;
-width: 980px;
-margin: 0 auto;
-margin-top: 0px;
-overflow: visible;
+	position: relative;
+	width: 980px;
+	margin: 0 auto;
+	margin-top: 0px;
+	overflow: visible;
 }
 
-
-
-
 #article{
-width: 980px;
-height: 900px;
-position: relative;
-top:0;
-left:0;
+	width: 980px;
+	height: 900px;
+	position: relative;
+	top:0;
+	left:0;
 }
 
 .thumb-container{
@@ -91,137 +96,141 @@ left:0;
 }
 
 .thumbnail{
-position: relative;
-display: inline-block;
-border: none;
-box-shadow: none;
-padding: 0px;
+	position: relative;
+	display: inline-block;
+	border: none;
+	box-shadow: none;
+	padding: 0px;
 }
 
 label{
-z-index: 1;
-width: 100%;
-height: 80px;
-position: absolute;
-top: 0px;
-left: 0px;
-border-radius: 0px;
-border: none;
-margin: 0px;
-background-color: rgba(0, 0, 0, .3);
-color: white;
-cursor: pointer;
+	z-index: 1;
+	width: 100%;
+	height: 80px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	border-radius: 0px;
+	border: none;
+	margin: 0px;
+	background-color: rgba(0, 0, 0, .3);
+	color: white;
+	cursor: pointer;
 }
 
 .type{
-font-size: 20px;
-font-family:'Droid Sans';
-line-height: 18px;
-font-weight: 200;
-letter-spacing: 0px;
-display: inline-block;
-margin-left: 20px;
-margin-top: 20px;
+	font-size: 20px;
+	font-family:'Droid Sans';
+	line-height: 18px;
+	font-weight: 200;
+	letter-spacing: 0px;
+	display: inline-block;
+	margin-left: 20px;
+	margin-top: 20px;
 }
+
 .num{
-font-size: 20px;
-font-family:'Droid Sans';
-line-height: 18px;
-font-weight: 100;
-letter-spacing: 2px;
-display: inline-block;
+	font-size: 20px;
+	font-family:'Droid Sans';
+	line-height: 18px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	display: inline-block;
 }
+
 .title{
-font-size: 13px;
-font-family:'Droid Sans';
-line-height: 20px;
-font-weight: 100;
-letter-spacing: 2px;
-display: inline-block;
-margin-left: 20px;
+	font-size: 13px;
+	font-family:'Droid Sans';
+	line-height: 20px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	display: inline-block;
+	margin-left: 20px;
 }
 
 header{
-z-index: 1;
-width: 960px;
-height: 29px;
-position: absolute;
-top: 0px;
-left: 0px;
-padding-left: 20px;
-padding-top: 8px;
-border-radius: 0px;
-border: none;
-background-image: url('../img/debut_dark.png');
-color: white;
+	z-index: 1;
+	width: 960px;
+	height: 29px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	padding-left: 20px;
+	padding-top: 8px;
+	border-radius: 0px;
+	border: none;
+	background-image: url('../img/debut_dark.png');
+	color: white;
 }
 
 header .type{
-font-size: 11px;
-font-family: 'Droid Sans';
-font-weight: 800;
-letter-spacing: 1px;
-margin-right: 8px;
-display: inline-block;
-text-transform: uppercase;
-margin-top: 0px;
-margin-left: 0px;
+	font-size: 11px;
+	font-family: 'Droid Sans';
+	font-weight: 800;
+	letter-spacing: 1px;
+	margin-right: 8px;
+	display: inline-block;
+	text-transform: uppercase;
+	margin-top: 0px;
+	margin-left: 0px;
 }
+
 header .num{
-font-size: 11px;
-font-family: 'Droid Sans';
-font-weight: 800;
-letter-spacing: 1px;
-margin-right: 13px;
-display: inline-block;
-text-transform: uppercase;
+	font-size: 11px;
+	font-family: 'Droid Sans';
+	font-weight: 800;
+	letter-spacing: 1px;
+	margin-right: 13px;
+	display: inline-block;
+	text-transform: uppercase;
 }
+
 header .title{
-font-size: 11px;
-font-family: 'Droid serif';
-font-weight: 100;
-letter-spacing: 1px;
-margin-right: 3px;
-display: inline-block;
-text-transform: capitalize;
+	font-size: 11px;
+	font-family: 'Droid serif';
+	font-weight: 100;
+	letter-spacing: 1px;
+	margin-right: 3px;
+	display: inline-block;
+	text-transform: capitalize;
 }
 
 .label.selected{
-width: 908px;
-height: 40px;
-position: absolute;
-top: -58px;
-left: -36px;
-border-radius: 0px;
-border: none;
-margin: 0px;
-margin-left: 80px;
-padding: 10px;
-box-shadow: 0px,0px,0px, inner;
-background-color: rgba(0,0,0,.8);
-display: block !important;
+	width: 908px;
+	height: 40px;
+	position: absolute;
+	top: -58px;
+	left: -36px;
+	border-radius: 0px;
+	border: none;
+	margin: 0px;
+	margin-left: 80px;
+	padding: 10px;
+	box-shadow: 0px,0px,0px, inner;
+	background-color: rgba(0,0,0,.8);
+	display: block !important;
 }
 
 .thumb.selected{
-position: absolute;
-margin-left: -8px;
-width: 10px;
-height: 10px;
-border-radius: 0px;
-border: 8px solid black;
-height: 36px;
-width: 36px;
-top: -67px;
-box-shadow: none;
+	position: absolute;
+	margin-left: -8px;
+	width: 10px;
+	height: 10px;
+	border-radius: 0px;
+	border: 8px solid black;
+	height: 36px;
+	width: 36px;
+	top: -67px;
+	box-shadow: none;
 }
 
 .thumb{
-width: inherit;
-height: inherit;
-display: inline-block;
-position: relative;
-background-color: rgba(100,100,100,.9);
-background-repeat:no-repeat !important;
+	width: inherit;
+	height: inherit;
+	display: inline-block;
+	position: relative;
+	background-color: rgba(100,100,100,.9);
+	background-repeat:no-repeat !important;
 }
 
 .w300{
@@ -233,6 +242,11 @@ background-repeat:no-repeat !important;
 .w944{
 	width: 944px;
 }
+.w980{
+	width: 980px;
+	margin-left: 0px !important;
+	margin-right: 0px !important;
+}
 .h139{
 	height: 139px;
 }
@@ -241,6 +255,10 @@ background-repeat:no-repeat !important;
 }
 .h450{
 	height: 450px;
+}
+
+.contact .num{
+	display: none;
 }
 
 #line{
@@ -512,7 +530,6 @@ background: rgb(255,255,255);
 }
 
 /**** Isotope Filtering ****/
-
 .isotope-item {
   z-index: 2;
 }
