--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -31,18 +31,25 @@ a:hover{
 	top: 20px;
 }
 
-#loading{
+#landing{
 	width: 100%;
 	height: 100%;
 	background-color: white;
 	z-index: 1000;
 	position: absolute;
-	top: -42px;
-	padding-top: 100px;
-	cursor: wait;
+	background: url(../img/debut_dark.png);
 }
 
-#landing{
+body.landing{
+	height: 100%;
+	overflow: hidden;
+}
+body.thumbnails{
+	height: 955px;
+	overflow: scroll;
+}
+
+#thumbnails{
 	top: 64px;
 }
 
@@ -63,15 +70,52 @@ a:hover{
 text-align: center;
 }
 
-.illusion{
-	background-image: url('../img/pulsar.gif');
-	background-repeat: no-repeat;
-	height: 137px;
-	width: 137px;
-	margin: 0 auto;
-	margin-top: 80px;
+.intro{
+	font-family: 'Droid Sans';
+	color: rgb(200,200,200);
+	line-height: 35px;
+	font-size: 30px;
+	letter-spacing: 2px;
+	width: 432px;
+	margin-left: 30px;
+	margin-top: 30px;
 	border: none;
 	background-color: transparent;
+}
+.intro.loading{
+	cursor: wait;
+}
+
+.intro .blockQuote{
+	font-size: 20px;
+	padding: 20px 0px;
+	letter-spacing: 0px;
+	font-family: 'Droid Serif';
+}
+
+.intro .action{
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+      -ms-transition-duration: 0.8s;
+       -o-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+      -ms-transition-property:     -ms-transform, opacity;
+       -o-transition-property:      -o-transform, opacity;
+          transition-property:         transform, opacity;
+     -webkit-transition-delay: 1s;
+        -moz-transition-delay: 0.5s;
+         -ms-transition-delay: 0.5s;
+          -o-transition-delay: 0.5s;
+             transition-delay: 0.5s;
+	opacity: 1;
+}
+.intro.loading .action{
+	opacity: 0;
+}
+#enter{
+	cursor: pointer;
 }
 
 .container{
@@ -84,7 +128,6 @@ text-align: center;
 
 #article{
 	width: 980px;
-	height: 900px;
 	position: relative;
 	top:0;
 	left:0;
